     had the option to use the keyed columns (if keyed) or all columns (if not). The default behaviour sets
     `by=key(dt)` to maintain backward compatibility. See man/duplicated.Rd and tests 986:991 for
     more information. Thanks to Arunkumar Srinivasan, Ricardo Saporta, and Frank Erickson for useful
     discussions.

  o  DT[CJ(...)] is 90% faster on 1e6 rows for example, #4849. The inputs are now sorted first before combining
     rather than after combining (thanks to Arun Srinivasan) and rep.int instead of rep (thanks to Sean Garborg).
     Reminder: CJ = Cross Join; i.e., joins to all combinations of its inputs. 
     
  o  CJ() gains 'sorted' argument, by default TRUE for backwards compatibility. FALSE retains input order and is faster
     to create the result of CJ() but then slower to join from since unkeyed.
  
BUG FIXES

  o  merge now returns no rows (rather than NA rows) when y is empty and all.y=TRUE (or all=TRUE), #2633. Thanks
     to Vinicius Almendra for reporting :
       http://stackoverflow.com/questions/15566250/merge-data-table-with-all-true-introduces-na-row-is-this-correct

  o  rbind now handles data.tables and lists with non-standard and/or duplicate names.
     These were bugs # 2726 & # 2384 Thank you to Garrett See.

  o  rbind, cbind and merge on data.table should now work in packages that Import but do not
     Depend on data.table. Many thanks to a patch to .onLoad from Ken Williams, and related
     posts from Victor Kryukov :
	   http://r.789695.n4.nabble.com/Import-problem-with-data-table-in-packages-tp4665958.html

  o  Mixing adding and updating into one DT[, `:=`(existingCol=...,newCol=...), by=...] now works
     without error or segfault, #2778 and #2528. Many thanks to Arunkumar Srinivasan for reporting
     and for the nice reproducible examples. Tests added.

  o  rbindlist() now binds factor columns correctly, #2650. Thanks to Ricardo Saporta for
     reporting. Test added.
